[gd_scene load_steps=6 format=2]

[ext_resource path="res://Resources/Artwork/Entity/simple_player.png" type="Texture" id=1]
[ext_resource path="res://Entity/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Resources/Sounds/shake.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 4
frame = 2
__meta__ = {
"_editor_description_": ""
}

[node name="Collider" type="CollisionShape2D" parent="."]
shape = SubResource( 7 )

[node name="InteractDetector" type="Area2D" parent="."]
collision_layer = 2

[node name="Detector" type="CollisionShape2D" parent="InteractDetector"]
modulate = Color( 0.366383, 0.95, 0.0285, 1 )
position = Vector2( 16, 0 )
shape = SubResource( 1 )

[node name="SoundEffect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[connection signal="body_entered" from="InteractDetector" to="." method="_on_InteractDetector_body_entered"]
[connection signal="body_exited" from="InteractDetector" to="." method="_on_InteractDetector_body_exited"]
